# arcanum

./: .flake8  .gitignore  Arcanum.spec  Changelog.md  LICENSE.md  README.md  create-app.sh  pyproject.toml  requirements.txt
assets/: app-icon.icns
src/: about_window.py  error_window.py  input_password.py  main.py  window_manager.py
